add Our donate plan section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,73 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <i class="fa-sharp fa-solid fa-user"></i>
+    <header>
+        <nav>
+            <h1 class="logo-text"><span class="primary-color">Do</span>nate</h1>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="header-content">
+            <h1 class="donate-title">Let’s Help Those Who Are <br> More In Need</h1>
+            <p class="donate-desc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.<br> No duo populo animal noluisse, enim</p>
+            <button class="primary-btn">Donate New</button>
+        </div>
+    </header>
+    <main class="main-content">
+        <section class="donate-today">
+            <h1 class="today-title">Donate Today</h1>
+            <p class="today-desc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="box-tk">
+                <div class="all-boxes">
+                    100tk
+                </div>
+                <div class="all-boxes">
+                    200tk
+                </div>
+                <div class="all-boxes">
+                    500tk
+                </div>
+                <div class="all-boxes">
+                    1000tk
+                </div>
+                <div class="all-boxes">
+                    5000tk
+                </div>
+            </div>
+            <p class="other-tk">Other Amount (Taka)</p>
+            <hr class="hr-today">
+            <button class="primary-btn">Donate Now</button>
+
+        </section>
+        <section class="donate-plan">
+            <div class="donate-title-desc">
+                <h1 class="today-title">Our Donate Plan</h1>
+                <p class="donate-title-desc-sub">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>deterruisset. No duo populo animal noluisse, enim</p>
+            </div>
+            <div class="donate-box">
+                <div class="donate-box-3">
+                    <img src="./icons/food.png" alt="">
+                    <h3 class="food-box-title">Food for a family</h3>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="donate-box-3">
+                    <img src="./icons/food.png" alt="">
+                    <h3 class="food-box-title">Food for a family</h3>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="donate-box-3">
+                    <img src="./icons/food.png" alt="">
+                    <h3 class="food-box-title">Food for a family</h3>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
