--- a/index.html
+++ b/index.html
@@ -75,7 +75,28 @@
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                 </div>
             </div>
+            <div class="live-depend">
+                <div class="depend-content">
+                    <h2 class="bottom-space">Their lives depend on your donation</h2>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <p class="depend-desc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                </div>
+                <div class="depend-img">
+                    <img class="depend-img" src="./images/donation11.jpg" alt="">
+                </div>
+            </div>
+            <div class="live-depend">
+                <div class="depend-img">
+                    <img class="depend-img" src="./images/donation11.jpg" alt="">
+                </div>
+                <div class="depend-content">
+                    <h2 class="bottom-space">Their lives depend on your donation</h2>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <p class="depend-desc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                </div>
+            </div>
         </section>
+
     </main>
     
 </body>
