--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="live-depend">
                 <div class="depend-content">
                     <h2 class="bottom-space">Their lives depend on your donation</h2>
-                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <p class="depend-desc-1">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
                     <p class="depend-desc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
                 </div>
                 <div class="depend-img">
@@ -91,13 +91,27 @@
                 </div>
                 <div class="depend-content">
                     <h2 class="bottom-space">Their lives depend on your donation</h2>
-                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <p class="depend-desc-1">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
                     <p class="depend-desc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                </div>
+            </div>
+            <div class="my-update">
+                <div class="my-update-content">
+                    <h1 class="update-title">Get My Update</h1>
+                    <p class="update-desc">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                </div>
+                <div class="email-sec">
+                    <input type="email" placeholder="Email">
+                    <button class="submit-btn">Submit</button>
                 </div>
             </div>
         </section>
 
     </main>
+    <footer class="footer">
+        <h2>Be Humble</h2>
+        <p>I’m gonna do it</p>
+    </footer>
     
 </body>
 </html>
